--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@lucide/lab": "^0.1.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@shopify/flash-list": "1.6.3",
     "expo": "52.0.33",
+    "expo-av": "^15.1.7",
     "expo-blur": "^14.0.3",
     "expo-constants": "^17.0.5",
     "expo-device": "~5.9.3",
@@ -37,6 +39,7 @@
     "react-native": "0.76.6",
     "react-native-ble-plx": "^3.1.2",
     "react-native-gesture-handler": "^2.23.0",
+    "react-native-maps": "^1.26.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.4.0",
