--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "expo-av": "^15.1.7",
     "expo-blur": "^14.0.3",
     "expo-constants": "^17.0.5",
-    "expo-device": "~5.9.3",
+    "expo-device": "^7.1.4",
     "expo-font": "^13.0.3",
     "expo-haptics": "^14.0.1",
     "expo-linear-gradient": "^14.0.2",
